<resources>
    <string name="app_name">Pole</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="text_user_id">User Id</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_validate">Validate</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_done">Done</string>
    <string name="action_submit">Submit</string>


    <string name="error_invalid_user_id">This user userId is invalid</string>

    <string name="title_activity_main">Home</string>

    <string name="title_profile">Profile</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="text_verify_otp">Verifying OTP</string>
    <string name="text_enter_otp">Enter OTP</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
