<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nitin.pole.views.SignInActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        android:layout_margin="16dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/container_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/text_verify_otp"
                    android:textColor="@color/colorNegative"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_otp_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_enter_otp"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/textColorHint">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:imeOptions="actionDone"
                        android:padding="8dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/action_validate_otp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/action_confirm"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>


            <TextView
                android:id="@+id/action_change_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="Change User Id ?"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/sign_in_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/container_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/colorNegative"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="40dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_user_id_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_user_id"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/textColorHint">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:drawableEnd="@drawable/ic_stat_add_a_photo"
                        android:drawableRight="@drawable/ic_stat_add_a_photo"
                        android:imeOptions="actionDone"
                        android:padding="8dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/action_validate"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/action_validate"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_a" />
</RelativeLayout>
